[gd_scene load_steps=2 format=4 uid="uid://cp8mgtcrcrxwf"]

[ext_resource type="Script" uid="uid://6dyrjalo51e3" path="res://Prefab/GUI/DragMenu/Select/DragMenuSelectItem.gd" id="1"]

[node name="DragMenuSelectItem" type="Node2D"]
script = ExtResource("1")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = -205.5
offset_top = -171.0
offset_right = 205.5
offset_bottom = 171.0
mouse_default_cursor_shape = 2

[connection signal="texture_changed" from="Sprite" to="." method="_on_sprite_texture_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
